# ane-urlloader

./: .gitignore  LICENSE  README.md
CSharpLibrary/: .gitignore  UrlLoaderNativeLibrary.sln  global.json
CSharpLibrary/UrlLoaderNativeLibrary/: ExportFunctions.cs  HappyEyeballsHttp.cs  IPAddressComparer.cs  JsonDictionaryHeaderContext.cs  JsonDnsDoh.cs  LoaderManager.cs  UrlLoaderNativeLibrary.csproj
CSharpLibrary/UrlLoaderTest/: Program.cs  UrlLoaderTest.csproj
androidNative/: build.gradle.kts  settings.gradle.kts
androidNative/app/: build.gradle.kts
androidNative/gradle/: libs.versions.toml
androidNative/gradle/wrapper/: gradle-wrapper.properties
aneBuild/: build-ios-csharp.sh  build-mac-csharp.sh  build.bat  copy-mac-ios-files.bat  extension.xml  platformAndroid.xml  platformIOS.xml  resign.sh
aneBuild/ios/UrlLoaderANE_IOS_Wrapper.framework/: Info.plist  UrlLoaderANE_IOS_Wrapper
aneBuild/macos/UrlLoaderANE.framework/: UrlLoaderANE
macNative/UrlLoaderANE/: UrlLoaderNativeLibrary.cpp  UrlLoaderNativeLibrary.hpp  UrlLoaderSupport.cpp  UrlLoaderSupport.hpp  log.cpp
macNative/UrlLoaderANE-IOS-Wrapper/: Test.cpp  Test.hpp
macNative/UrlLoaderANE-ios/: UrlLoaderANE_ios.h  UrlLoaderANE_ios.m  log.hpp
macNative/UrlLoaderANE.xcodeproj/: project.pbxproj
windowsCSharpLibrary/: UrlLoaderNativeLibrary.sln
windowsCSharpLibrary/UrlLoaderNativeLibrary/: ExportFunctions.cs  HappyEyeballsHttp.cs  LoaderManager.cs  UrlLoaderNativeLibrary.csproj
windowsNative/: .gitignore  CMakeLists.txt
windowsNative/src/: UrlLoaderNativeLibrary.cpp  UrlLoaderNativeLibrary.h  library.cpp  library.h  log.cpp  log.h
(+24 files in other folders)
